z-index fix on hero section

--- a/src/Styles/Hero.scss
+++ b/src/Styles/Hero.scss
@@ -68,7 +68,7 @@
   flex-direction: column;
   background-color: rgba(0, 0, 0, 0.582);
   margin-top: 50px;
-  z-index: 9999;
+  z-index: 999;
 
   h1 {
     font-size: 20px;
